--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -25,3 +25,36 @@
     height: 318px;
     overflow-y: scroll;
 }
+
+.violation-container {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    display: flex;
+    flex: 1.2;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.violation-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+}
+
+.violation-text {
+    flex: 1.2;
+    padding-right: 20px;
+}
+
+.add-comment {
+    justify-content: center;
+    display: flex;
+    width: 99%;
+    flex-direction: column;
+}
+
+.violation-description {
+    margin-top: 10px;
+    text-align: left;
+}
