--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -19,54 +19,93 @@
       customer-centric future for the industry.
     </p>
   </div>
-  <div class="comments">
-    <h2>Comments</h2>
-    <div class="comments-container">
-      <div *ngFor="let comment of comments" class="comment-card">
-        <h4 class="m-0">{{ comment.section }}: {{ comment.text }}</h4>
-        <p class="comments-text">{{ comment.commentText }}</p>
-        <div class="assign-dropdown-panel">
-          <div>
-            <button
-              class="like-button"
-              (click)="comment.id !== 0 ? toggleLike(comment) : ''"
+  <div class="violation-container">
+    <h2>Violation</h2>
+    <div class="violation-content">
+      <div class="violation-text">
+        <h4 class="m-0">Misrepresentation of Information</h4>
+        <p class="violation-description">
+          Misrepresentation of information in an insurance application or claim
+          can lead to serious consequences. This violation occurs when a
+          policyholder provides false or misleading information, either
+          intentionally or unintentionally, regarding their health, property, or
+          any other details that are critical for underwriting or claims
+          purposes. Common examples include hiding pre-existing medical
+          conditions, falsifying the value of assets, or omitting key facts.
+          Misrepresentation can result in claim denial, policy cancellation, or
+          even legal action. It's essential to provide accurate and honest
+          information to maintain the integrity of the policy and avoid
+          penalties.
+        </p>
+      </div>
+      <div class="add-comment">
+        <textarea
+          style="height: 87px; resize: both"
+          [(ngModel)]="newComment"
+          placeholder="Add a comment"
+        ></textarea>
+        <button
+          (click)="addComment()"
+          style="
+            align-self: center;
+            align-content: center;
+            height: 25px;
+            padding: 5px;
+          "
+        >
+          Add Comment
+        </button>
+      </div>
+    </div>
+
+    <div class="comments">
+      <h2>Comments</h2>
+      <div class="comments-container">
+        <div *ngIf="comments.length === 0">
+          <h4>No comments yet!...</h4>
+        </div>
+        <div *ngFor="let comment of comments" class="comment-card">
+          <h4 class="m-0">{{ comment.section }}: {{ comment.text }}</h4>
+          <p class="comments-text">{{ comment.commentText }}</p>
+          <div class="assign-dropdown-panel">
+            <div>
+              <button
+                class="like-button"
+                (click)="comment.id !== 0 ? toggleLike(comment) : ''"
+              >
+                👍 <span>{{ comment.likes }}</span>
+              </button>
+              <button
+                class="assign-button"
+                [disabled]="comment.id === 0"
+                (click)="toggleDropdown(comment)"
+              >
+                Assign
+              </button>
+            </div>
+            <div
+              class="assigned-to"
+              [ngStyle]="{
+                display:
+                  comment.assignedTo.trim() === '' || comment.showDropdown
+                    ? 'none'
+                    : ''
+              }"
             >
-              👍 <span>{{ comment.likes }}</span>
-            </button>
-            <button
-              class="assign-button"
-              [disabled]="comment.id === 0"
-              (click)="toggleDropdown(comment)"
-            >
-              Assign
-            </button>
-          </div>
-          <div
-            class="assigned-to"
-            [ngStyle]="{
-              display:
-                comment.assignedTo.trim() === '' || comment.showDropdown
-                  ? 'none'
-                  : ''
-            }"
-          >
-            <span>Assigned to:</span>
-            <button>{{ comment.assignedTo }}</button>
-          </div>
-          <div *ngIf="comment.showDropdown" class="assign-dropdowns">
-            <button
-              *ngFor="let assignee of asignees"
-              (click)="assignComment(comment, assignee)"
-            >
-              {{ assignee.name }}
-            </button>
+              <span>Assigned to:</span>
+              <button>{{ comment.assignedTo }}</button>
+            </div>
+            <div *ngIf="comment.showDropdown" class="assign-dropdowns">
+              <button
+                *ngFor="let assignee of asignees"
+                (click)="assignComment(comment, assignee)"
+              >
+                {{ assignee.name }}
+              </button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="add-comment">
-      <textarea [(ngModel)]="newComment" placeholder="Add a comment"></textarea>
-      <button (click)="addComment()">Add Comment</button>
     </div>
   </div>
 </main>
