--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <main class="container no-scrollbar">
   <div class="card">
     <h2 class="section-title">Document Sections</h2>
